# batteryd

./: CMakeLists.txt  Makefile  PKGBUILD  batteryd  batteryd.cpp  batteryd.install  batteryd.rules  batteryd.service  batteryd@.service
cmake/Modules/: FindLibnotify.cmake
